Fix dark mode colors

--- a/app/styles/pages/_host.scss
+++ b/app/styles/pages/_host.scss
@@ -207,11 +207,6 @@
   .driver {
     background-position: center center;
     background-repeat: no-repeat;
-    filter: grayscale(100%);
-    -webkit-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
     position: relative;
     max-width: 190px;
     margin-right: 14px;
