--- a/app/styles/themes/_dark.scss
+++ b/app/styles/themes/_dark.scss
@@ -1,8 +1,8 @@
 //** Background color for `<body>`.
-$body-bg                             : $black;
+$body-bg                             : #1b1c21;
 //** Global text color on `<body>`.
-$text-color                          : mix($mid-grey, $light-grey);
-$text-muted                          : darken($mid-grey, 20%);
+$text-color                          : #ffffff;
+$text-muted                          : lighten($mid-grey, 20%);
 
 $primary                             : $primary; //button non state
 $primary-dark                        : darken($primary, 20%);
@@ -39,7 +39,7 @@ $accent-bg                           : $accent-two;
 $accent-border                       : rgba($light-grey,.05);
 
 /*footer*/
-$footer                              : darken($black, 20%);
+$footer                              : darken(#1b1c21, 20%);
 
 
 // Horizontal line color.
@@ -50,13 +50,13 @@ $shadow                              : rgba(black, .75);
 
 //table variables
 $table-bg                            : rgba($dark-grey, .7);
-$table-header                        : $body-bg;
+$table-header                        : #141419;
 $table-nested-header                 : $black;
 $table-bg-accent                     : rgba($mid-grey, .1);
 $table-bg-hover                      : rgba($info, .25);
 $table-bg-active                     : $table-bg-hover;
 $table-bg-selected                   : rgba($info, .20);
-$table-border-color                  : darken($mid-grey, 30);
+$table-border-color                  : #4a4b52;
 $table-body-separation               : 50px;
 $table-body-separation               : 25px;
 $group-row-height                    : 50px;
